--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1,1 +1,31 @@
-/* base css */
+:root {
+    --primary-color: #2e2100;
+    --white-color: #fff;
+    --black-color: #000;
+    --gray-color: #dbdbdb;
+    --text-color: #5f5b53;
+}
+
+* {
+    box-sizing: inherit;
+}
+
+html {
+    font-family: "Poppins", sans-serif;
+    font-size: 62.5%;
+    line-height: 1.6rem;
+    box-sizing: border-box;
+}
+
+a {
+    text-decoration: none;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+li {
+    padding: 0;
+}
