--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,1 +1,383 @@
-/* main css */
+/**********************/
+/* HEADER  NAVBAR */
+/**********************/
+
+.header {
+    margin-bottom: 65px;
+}
+.header_navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 45px;
+}
+
+.header_lesson-text {
+    color: #171100;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 34px;
+}
+
+.header_nav-item-block {
+    display: flex;
+    align-items: center;
+}
+
+.header_nav-item-list {
+    display: flex;
+    align-items: center;
+    padding-right: 70px;
+}
+
+.header_nav-item-list-li + .header_nav-item-list-li {
+    margin-left: 42px;
+}
+
+.header_nav-item-list-li {
+    color: var(--primary-color);
+    text-align: center;
+    font-size: 1.6rem;
+    font-style: normal;
+    font-weight: 400;
+}
+
+.header_nav-item-list-li:first-child {
+    font-weight: 600;
+    color: #171100;
+    position: relative;
+}
+
+.header_nav-item-list-li:first-child::before {
+    content: "";
+    position: absolute;
+    border: 1px solid black;
+    width: 14px;
+    top: 19px;
+    left: 2px;
+}
+
+.header_signup-btn {
+    /* margin-top: 36px; */
+}
+
+/**********************/
+/* HERO BAR */
+/**********************/
+
+.header_hero {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 72px;
+}
+
+.header_hero_desc {
+    margin-left: 30px;
+    width: 470px;
+}
+
+.header_hero_desc h1 {
+    color: #171100;
+    font-family: Sen;
+    font-size: 58px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 68px; /* 117.241% */
+    letter-spacing: -1.16px;
+}
+
+.header_hero_desc p {
+    color: #5f5b53;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+}
+.header_hero_img {
+    width: 470px;
+    height: 685px;
+}
+
+.header_hero_img-block {
+    position: relative;
+}
+
+.hero_ad {
+    position: absolute;
+    right: -100px;
+    bottom: 48px;
+    height: 270px;
+    width: 244px;
+    /* box-shadow: 3px 5px 10px 1px var(--gray-color); */
+    border-radius: 12px;
+    background: #fff;
+    box-shadow: 0px 16px 32px 0px rgba(0, 0, 0, 0.05);
+}
+
+.hero_add-block {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.hero_add-block:first-child {
+    padding-top: 24px;
+}
+
+.hero_add-20course,
+.hero_add-title {
+    margin: 0;
+}
+
+.hero_ad-icon {
+    margin-left: 25px;
+}
+
+.hero_add-icon-design,
+.hero_add-icon-development,
+.hero_add-icon-marketing {
+    padding: 15px;
+    border-radius: 50%;
+}
+.hero_add-icon-design {
+    background-color: #fff9e8;
+}
+
+.hero_add-icon-development {
+    background-color: #fcefff;
+}
+
+.hero_add-icon-marketing {
+    background-color: #ebeaff;
+}
+
+.hero_ad-design,
+.hero_ad-development,
+.hero_ad-marketing {
+    /* margin-left: 68px; */
+}
+
+.hero_ad-design {
+    /* padding-top: 24px; */
+}
+
+.hero_ad-development,
+.hero_ad-marketing {
+    padding-top: 14px;
+}
+
+.hero_add-20course {
+    color: #5f5b53;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+}
+
+.hero_add-title {
+    color: #171100;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 30px;
+}
+
+.hero-cta {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.hero_view-course-btn {
+    min-width: 180px;
+    height: 64px;
+    color: #fff;
+    text-align: center;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 30px;
+    border-radius: 32px;
+    background: #ffb900;
+}
+
+.hero-cta p {
+    color: #171100;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 80px;
+    margin-right: 20px;
+    text-align: center;
+}
+.hero-cta p img {
+    width: 40px;
+    height: 40px;
+    margin-right: 10px;
+    transform: translateY(35%);
+}
+
+.hero-course-info p {
+    color: #5f5b53;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+}
+
+.hero_course_block {
+    display: flex;
+    gap: 28px;
+}
+
+.hero-student span {
+    color: #5f5b53;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+}
+
+.hero-student span:first-child {
+    color: #171100;
+    font-family: Sen;
+    font-size: 44px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 54px;
+}
+
+.hero-course span {
+    color: #5f5b53;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+}
+
+.hero-course span:first-child {
+    color: #171100;
+    font-family: Sen;
+    font-size: 44px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 54px;
+}
+
+/**********************/
+/* Courses Section */
+/**********************/
+
+.courses {
+    /* height: 1000px; */
+    /* background-color: #5f5b53; */
+    margin-top: 200px;
+    margin-bottom: 200px;
+}
+.courses_header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.courses_header-text {
+    color: #171100;
+    font-size: 38px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 48px;
+    margin: 0;
+}
+
+.courses_header-desc {
+    color: #5f5b53;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+    width: 458px;
+    margin: 0;
+}
+
+.courses_card {
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-between;
+}
+.courses_card-1 {
+    max-width: 370px;
+    border: 1px solid #e2dfda;
+    border-radius: 15px;
+}
+
+.courses_card-img {
+    width: 369px;
+    height: 278px;
+    border-radius: 12px 12px 0px 0px;
+    object-fit: cover;
+}
+
+.courses_card--title {
+    margin-left: 22px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.courses_card--title p {
+    color: #171100;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 30px;
+}
+
+.course_card__review span {
+    margin-right: 22px;
+    color: #fea31b;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 28px;
+    margin-left: 2px;
+}
+
+.courses_card--desc {
+    margin: 0px 22px;
+    color: #5f5b53;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+}
+
+.courses_card--price {
+    margin: 12px 22px 22px 22px;
+    /* margin-right: 22px; */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.courses_card--price p {
+    color: #171100;
+    font-family: Poppins;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 30px; /* 166.667% */
+}
+
+.btn-web-design {
+    background-color: #ffb900;
+}
+
+.courses_card-2 {
+    max-width: 370px;
+    border: 1px solid #e2dfda;
+    border-radius: 15px;
+}
+
+.courses_card-3 {
+    max-width: 370px;
+    border: 1px solid #e2dfda;
+    border-radius: 15px;
+}
