--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -381,3 +381,50 @@
     border: 1px solid #e2dfda;
     border-radius: 15px;
 }
+
+/**********************/
+/* User_comment Section */
+/**********************/
+
+.user_comment {
+    height: 380px;
+    background-color: #4e3903;
+    margin-bottom: 200px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.user_comment-userinfo {
+    padding: 94px 0 96px 145px;
+}
+
+.user_name {
+    color: #f7f7f7;
+    font-family: Sen;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 34px;
+    margin: 0;
+}
+
+.user_desc {
+    color: #bfbcb2;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+    margin-top: 4px;
+}
+
+.content-text {
+    color: #fff;
+    font-size: 26px;
+    font-style: italic;
+    font-weight: 400;
+    line-height: 40px;
+    width: 740px;
+    margin-right: 135px;
+    margin: 0;
+}
