--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -450,6 +450,7 @@
 }
 
 .testimonial-desc {
+    margin-left: 130px;
 }
 
 .testimonial-author1 {
@@ -537,7 +538,6 @@
     padding-top: 96px;
     padding-bottom: 86px;
     background: #fffcf4;
-    width: 1440px;
     height: 878px;
 }
 
@@ -608,9 +608,10 @@
 
 .our_blog-card-item {
     border-radius: 16px;
+    background-color: #fff;
     width: 370px;
     height: 467px;
-    box-shadow: 0px 16px 32px 0px rgba(0, 0, 0, 0.05);
+    box-shadow: 4px 16px 32px 4px rgba(62, 60, 60, 0.4);
 }
 .our_blog-desc {
     width: 330px;
